# quick_python_project

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: cd.yml  ci.yml
src/quick_project/: main.py  project_generation.py
src/quick_python_project/: cli.py  main.py  project_generation.py  version.py
src/quick_python_project/templates/: template_config.json  template_hatchling_pyproject.toml  template_main.py  template_pyproject.toml
templates/: README.md  pyproject.toml  pyproject.toml_poetry  pyproject.toml_setuptools
tests/: test_cli.py  test_main.py  test_project_generation.py
