[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/quick_python_project/version.py"
version_scheme = "post-release"

[project]
name = "quick_python_project"
description = "A CLI tool to create empty Python projects"
authors = [{name = "James Berkheimer", email = "james.berkheimer@gmail.com"}]
license = {text = "MIT"}
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "click",
    "colorlog"
]

[project.optional-dependencies]
dev = [
    "build",
    "coverage",
    "covdefaults",
    "pytest",
    "ruff",
    "tox",
    "twine"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
qpp = "quick_python_project.cli:cli"

[project.urls]
homepage = "https://github.com/james-berkheimer/quick_python_project"

[tool.setuptools]
include-package-data = true
platforms = ["any"]
license-files = ["LICENSE"]
package-data = {"quick_python_project" = ["templates/*"]}

[tool.setuptools.packages.find]
exclude = ["tests"]
namespaces = true
where = ["src"]

[tool.ruff]
exclude = [
    ".bzr",
    ".cache",
    ".direnv",
    ".eggs",
    "*.egg-info",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    "*.pyc",
    "__pycache__",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".code-workspace"
]
lint.ignore = ["F401", "F403", "F811"]
line-length = 100